Rename button to Remove Title

--- a/index.html
+++ b/index.html
@@ -872,7 +872,7 @@
             <input type="file" id="titleFileInput" accept="image/*" style="display:none;">
             <button class="title-admin-btn" id="titleSelectBtn">Select Image</button>
             <button class="title-admin-btn primary" id="titleUploadBtn" disabled>Upload to Server</button>
-            <button class="title-admin-btn" id="titleRemoveBtn">Remove Current Title</button>
+            <button class="title-admin-btn" id="titleRemoveBtn">Remove Title</button>
             <button class="title-admin-btn" id="titleCloseBtn">Close Admin</button>
 
             <div id="titleAdminStatus" style="color:#888;text-align:center;margin-top:20px;"></div>
