Add version 2.1-dev indicator

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!-- Version 2.0 - Added eye anchor points feature -->
-<html lang="en">
+<!-- Version 2.1-dev - Gesture mask adjustment -->
+<html lang="en" data-version="2.1-dev">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -1156,6 +1156,8 @@
 
         // Saved masks
         const savedMasks = [];
+
+        console.log('Durrell Masks v2.1-dev loaded');
 
         // Anchor point placement state (eyes and mouth)
         let eyePointMode = false;
