Fix rotation direction (v2.6-dev)

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!-- Version 2.5-dev - Gestures apply to anchors -->
-<html lang="en" data-version="2.5-dev">
+<!-- Version 2.6-dev - Gestures apply to anchors -->
+<html lang="en" data-version="2.6-dev">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -997,7 +997,7 @@
             <button class="header-btn" id="galleryBtn">Choose Mask</button>
             <button class="header-btn" id="makeMaskBtn">Create Mask</button>
         </div>
-        <div class="tap-hint">tap screen to change masks &nbsp;&nbsp;&nbsp; <button class="share-btn" id="headerShareBtn">share this app</button> <span style="opacity:0.5">v2.5-dev</span></div>
+        <div class="tap-hint">tap screen to change masks &nbsp;&nbsp;&nbsp; <button class="share-btn" id="headerShareBtn">share this app</button> <span style="opacity:0.5">v2.6-dev</span></div>
 
         <!-- Face Tracking View -->
         <div class="view active" id="trackView">
@@ -1157,7 +1157,7 @@
         // Saved masks
         const savedMasks = [];
 
-        console.log('Durrell Masks v2.5-dev loaded');
+        console.log('Durrell Masks v2.6-dev loaded');
 
         // Anchor point placement state (eyes and mouth)
         let eyePointMode = false;
@@ -1198,9 +1198,9 @@
             dx /= scaleRatio;
             dy /= scaleRatio;
 
-            // Apply rotation
-            const cos = Math.cos(rotationDelta);
-            const sin = Math.sin(rotationDelta);
+            // Apply rotation (negated so mask rotates same direction as gesture)
+            const cos = Math.cos(-rotationDelta);
+            const sin = Math.sin(-rotationDelta);
             const newDx = dx * cos - dy * sin;
             const newDy = dx * sin + dy * cos;
 
