--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!-- Version 2.13-dev - Gestures apply to anchors -->
-<html lang="en" data-version="2.13-dev">
+<!-- Version 2.14-dev - Gestures apply to anchors -->
+<html lang="en" data-version="2.14-dev">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -997,7 +997,7 @@
             <button class="header-btn" id="galleryBtn">Choose Mask</button>
             <button class="header-btn" id="makeMaskBtn">Create Mask</button>
         </div>
-        <div class="tap-hint">tap screen to change masks &nbsp;&nbsp;&nbsp; <button class="share-btn" id="headerShareBtn">share this app</button> <span style="opacity:0.5">v2.13-dev</span></div>
+        <div class="tap-hint">tap screen to change masks &nbsp;&nbsp;&nbsp; <button class="share-btn" id="headerShareBtn">share this app</button> <span style="opacity:0.5">v2.14-dev</span></div>
 
         <!-- Face Tracking View -->
         <div class="view active" id="trackView">
@@ -1157,7 +1157,7 @@
         // Saved masks
         const savedMasks = [];
 
-        console.log('Durrell Masks v2.13-dev loaded');
+        console.log('Durrell Masks v2.14-dev loaded');
 
         // Anchor point placement state (eyes and mouth)
         let eyePointMode = false;
@@ -1205,8 +1205,8 @@
             // Apply pan (convert screen pixels to normalized)
             // Sensitivity: ~500px pan = full mask width shift
             const panSensitivity = 0.002;
-            midX += panX * panSensitivity;
-            midY += panY * panSensitivity;
+            midX -= panX * panSensitivity;
+            midY -= panY * panSensitivity;
 
             // Vector from mid to right anchor
             let dx = rightX - (leftX + rightX) / 2;
