--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!-- Version 2.15-dev - Gestures apply to anchors -->
-<html lang="en" data-version="2.15-dev">
+<!-- Version 2.16-dev - Gestures apply to anchors -->
+<html lang="en" data-version="2.16-dev">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -445,8 +445,8 @@
             width: 24px;
             height: 24px;
             background: none;
-            border: 1px solid #888;
-            color: #888;
+            border: 1px solid #e74c3c;
+            color: #e74c3c;
             font-size: 14px;
             font-weight: bold;
             cursor: pointer;
@@ -456,7 +456,7 @@
         }
 
         .gallery-mask-item .delete-btn:active {
-            background: #888;
+            background: #e74c3c;
             color: white;
         }
 
@@ -466,14 +466,14 @@
             right: 5px;
             padding: 4px 10px;
             background: none;
-            border: 1px solid #888;
-            color: #888;
+            border: 1px solid #e74c3c;
+            color: #e74c3c;
             font-size: 11px;
             cursor: pointer;
         }
 
         .gallery-mask-item .edit-btn:active {
-            background: #888;
+            background: #e74c3c;
             color: white;
         }
 
@@ -997,7 +997,7 @@
             <button class="header-btn" id="galleryBtn">Choose Mask</button>
             <button class="header-btn" id="makeMaskBtn">Create Mask</button>
         </div>
-        <div class="tap-hint">tap screen to change masks &nbsp;&nbsp;&nbsp; <button class="share-btn" id="headerShareBtn">share this app</button> <span style="opacity:0.5">v2.15-dev</span></div>
+        <div class="tap-hint">tap screen to change masks &nbsp;&nbsp;&nbsp; <button class="share-btn" id="headerShareBtn">share this app</button> <span style="opacity:0.5">v2.16-dev</span></div>
 
         <!-- Face Tracking View -->
         <div class="view active" id="trackView">
@@ -1157,7 +1157,7 @@
         // Saved masks
         const savedMasks = [];
 
-        console.log('Durrell Masks v2.15-dev loaded');
+        console.log('Durrell Masks v2.16-dev loaded');
 
         // Anchor point placement state (eyes and mouth)
         let eyePointMode = false;
